# expanded-naturalproduct-chemspace

./: .gitattributes  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.ipynb_checkpoints/: Makefile-checkpoint
data/: 230106_frozen_metadata_cleaned.parquet
data/LOTUS/: Link_to_LOTUS_v10  top_10_pam.csv
data/MINES/: reactions_compounds_list.parquet  reactions_compounds_list_full.parquet
dataset-extractor-lotus/: defl.py  venn_plot_databases.py
docs/: index.md  modules.md
expanded-naturalproduct-chemspace/: csv_to_parquet.py  overview-LOTUS.ipynb  venndiagramm.ipynb
expanded-naturalproduct-chemspace/.ipynb_checkpoints/: overview-LOTUS-checkpoint.ipynb
expanded_naturalproduct_chemspace/: 01_LOTUS_overview.ipynb  02_MINES_input_file_LOTUS.ipynb  02_MINES_input_files.ipynb  03_MINES_db_statistics.ipynb  03_MINES_reactions.ipynb  04_MINES_Metacyc.ipynb  04_MINES_validation.ipynb  05_LOTUS_MINES_taxonomy_search.ipynb  compounds.ipynb  csv_to_parquet.py  defl.py  delet_database_reading.ipynb  delet_venndiagramm.ipynb  overview-LOTUS.ipynb  plot_connection.py  pubchem_search.py  save_Lotus.ipynb  save_files.ipynb  starting_to_predicted.py  taxom_finder_predicted.py  taxom_finder_predicted_IBU.py
expanded_naturalproduct_chemspace/.ipynb_checkpoints/: 01_LOTUS_overview-checkpoint.ipynb  03_MINES_db_statistics-checkpoint.ipynb  03_MINES_reactions-checkpoint.ipynb  04_MINES_Metacyc-checkpoint.ipynb  04_MINES_validation-checkpoint.ipynb  05_LOTUS_MINES_taxonomy_search-checkpoint.ipynb  compounds-checkpoint.ipynb  delet_database_reading-checkpoint.ipynb  delet_venndiagramm-checkpoint.ipynb  pubchem_search-checkpoint.py  save_Lotus-checkpoint.ipynb  starting_to_predicted-checkpoint.py  taxom_finder_predicted-checkpoint.py  taxom_finder_predicted_IBU-checkpoint.py
tests/: test_foo.py
