[tool.poetry]
name = "expanded_naturalproduct_chemspace"
version = "0.0.1"
description = "info and explanation for the masterthesis"
authors = ["P. Amrein <fpascal.amrein@unifr.ch>"]
repository = "https://github.com/pamrein/expanded-naturalproduct-chemspace"
documentation = "https://pamrein.github.io/expanded-naturalproduct-chemspace/"
readme = "README.md"
packages = [
  {include = "expanded_naturalproduct_chemspace"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
polars = "^1.4.1"
jupyter = "^1.0.0"
numpy = "^2.0.1"
pymongo = "^4.8.0"
matplotlib = "^3.9.1.post1"
bs4 = "^0.0.2"
tqdm = "^4.66.5"
statistics = "^1.0.3.5"
pubchempy = "^1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["expanded_naturalproduct_chemspace"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
